# libjpgenc

./: .gitignore  CMakeLists.txt  README.md
include/: jpgenc.h  jpgenc_const.h  jpgenc_definition.h
src/: jpgenc.c
